--- a/day03/day03/day03.vcxproj.filters
+++ b/day03/day03/day03.vcxproj.filters
@@ -30,5 +30,28 @@
     <ClCompile Include="test24_RacingCar.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="test25_RacingCarClass.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="test26_Car.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="test26_RacingMain.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="test27_FileDivMain.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="test27_FileDiv.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="test26_Car.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="test27_FilDiv.h">
+      <Filter>소스 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
