4일차 캡슐화

--- a/day04/day04/day04.vcxproj
+++ b/day04/day04/day04.vcxproj
@@ -130,7 +130,21 @@
     <ClCompile Include="test28_FruitSaleSim1.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="test29_RectangleFault.cpp" />
+    <ClCompile Include="test29_RectangleFault.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="test30_PointHiding.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="test31_RectangleFaultFind.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="test31_RectangleHiding.cpp" />
+    <ClCompile Include="test32_Encaps1.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="test30_PointHiding.h" />
+    <ClInclude Include="test31_RectangleHiding.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
