--- a/day11/day11/day11.vcxproj.filters
+++ b/day11/day11/day11.vcxproj.filters
@@ -42,5 +42,11 @@
     <ClCompile Include="test118_NeedSpecialization.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\day10\day10\test109_GradeOverloading.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="test119_Grade.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
