13일차 마무리

--- a/day13/day13/day13.vcxproj
+++ b/day13/day13/day13.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\day12\day12\test125_ProductClass.cpp" />
     <ClCompile Include="test126_Exception.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
